--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;600;700;800&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
 }
+body {
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  height: auto;
+  padding-bottom: 5rem;
+}
+h2,
+h3,
+a {
+  font-weight: 700 !important;
+  line-height: 1.4rem !important;
+  color: rgba(41, 41, 41, 1);
+  font-weight: 600;
+}
+p {
+  line-height: 1.6rem;
+}
+.awssld {
+  height: 25rem;
+}
+.awssld__content {
+  border-radius: 5px;
+}
+.awssld__content > div {
+  width: 100%;
+  height: 100%;
+}
+.mt-4 {
+  margin-top: 4rem;
+}
+/* ::-webkit-scrollbar {
+  background-color: #f1f1f1;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+} */
